# self-evolving-agent-2

./: CLI_COMPLETE_SUMMARY.md  CLI_OPTIMIZATION_SUMMARY.md  COMPLETION_REPORT_MODULE_2.md  COMPLETION_REPORT_MODULE_3.md  COMPLETION_REPORT_MODULE_4.md  COMPLETION_REPORT_MODULE_5.md  Cargo.toml  DESIGN_PHILOSOPHY.md  IMPLEMENTATION_GUIDE.md  LICENSE  LLM_GATEWAY_INTEGRATION.md  MODULES.md  PROJECT_SUMMARY.md  README.md  ROUTING_FIX_VERIFICATION.md  TEST_SUMMARY.md  USAGE_GUIDE.md  build-and-copy.ps1  build-and-copy.sh  config.toml
.cargo/: config.toml
concrete-servers/: todolist.md
crates/concrete-servers/: Cargo.toml
crates/concrete-servers/src/: factory.rs  lib.rs  registry.rs
crates/concrete-servers/src/servers/: calculator.rs  code_review.rs  counter.rs  echo.rs  file_io.rs  http_client.rs  kvstore.rs  llm_gateway.rs  mod.rs  text_analyzer.rs  text_transformer.rs  time.rs
crates/mcp-server-framework/: Cargo.toml  README.md
crates/mcp-server-framework/config/: sample_server.toml
crates/mcp-server-framework/src/: cli.rs  lib.rs  main.rs
crates/mcp-server-framework/src/gossip/: failure.rs  handler.rs  heartbeat.rs  message.rs  mod.rs  topology.rs
crates/mcp-server-framework/src/messaging/: dispatch.rs  forward.rs  mod.rs  route.rs  send.rs
crates/mcp-server-framework/src/protocol/: codec.rs  message.rs  mod.rs  tool.rs
crates/mcp-server-framework/src/runtime/: config.rs  event.rs  metrics.rs  mod.rs  runner.rs
crates/mcp-server-framework/src/server/: base.rs  lifecycle.rs  mod.rs  registration.rs  trait_def.rs
crates/mcp-server-framework/src/topology/: consistency.rs  mod.rs  query.rs  state.rs  update.rs
crates/router-core/: Cargo.toml  README.md  todolist.md
crates/router-core/examples/: basic_router.rs
crates/router-core/src/: classifier.rs  cli.rs  cycle_detector.rs  error.rs  lib.rs  main.rs  message.rs  preprocessor.rs  router.rs
crates/sea-agent/: Cargo.toml  README.md
crates/sea-agent/sessions/: 38c828f2-197a-47bd-a7c7-6cf238e8cf34.json  4f844fff-9f69-45a5-a455-808411a3b632.json  56123e89-e659-4711-91f4-b3b6b6179aee.json  6708008e-455b-4c02-9bd4-984f66fc238f.json  9676f1cc-5adb-4642-bec3-097861b2fd30.json  ae444289-00be-48e2-9d44-45ce7a06ec61.json  c092047d-5b32-43c2-a266-28c76981d3a9.json  da678170-dd1c-481c-9b31-66a26534058d.json  f1fbd345-7b08-4329-8c22-e7bde3145eec.json
crates/sea-agent/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  runtime.rs
crates/sea-agent/src/cli/: error_formatter.rs  help.rs  interactive.rs  mod.rs  output.rs  theme.rs  wizard.rs
crates/sea-agent/tests/: e2e_test.rs  llm_integration_test.rs  routing_fix_test.rs  server_capability_test.rs  session_dialog_test.rs
crates/session-manager/: Cargo.toml  README.md
crates/session-manager/src/: cache.rs  cli.rs  lib.rs  lifecycle.rs  main.rs  manager.rs  models.rs  routing_table.rs  store.rs
crates/session-manager/tests/: integration_test.rs
mcp-server-framework/: todolist.md
resources/agents/: README.md  agent-creator.json  assistant.json  rust-expert.json  template.json
router-core/: todolist.md
sea-agent/: todolist.md
session-manager/: todolist.md
sessions/: 06edb834-5d78-4cf5-bdbf-734045f78c8c.json  0810fd2e-5f70-4b2e-a1be-6994061125ed.json  510b2eb7-2134-4f7e-8ecd-a536c1cc08e6.json  5301b919-47e5-4909-ba16-6481616fc46c.json  aab9744d-2e64-411a-bb56-e9120a11270b.json  b6eec190-5151-4f83-80cf-3caff37e3b30.json  d52668ca-8843-4a17-ac98-d5568fe5e4fc.json  dadc54df-6ac2-4cf7-ba99-2ef684273e6d.json  f1297bef-7009-4f16-a9e8-3dcbe28a2084.json  f42558a1-b22b-4e8d-ac28-2ad1d6c3d362.json
src/: lib.rs  main.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/gateway/: config.rs  event.rs  message.rs  mod.rs
src/llm/: mod.rs
src/logger/: mod.rs
src/prompt/: mod.rs
src/session/: mod.rs
