[package]
name = "self-evolving-agent"
version = "0.2.0"
edition = "2021"
description = "A self-evolving agent capable of tool and prompt evolution"
license = "MIT"
authors = ["Az1mus"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
dialoguer = "0.11"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }

# Configuration
directories = "5"
toml = "0.8"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
