[package]
name = "concrete-servers"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Optional dependencies
reqwest = { workspace = true, optional = true }
regex = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

# Internal dependencies
mcp-server-framework = { path = "../mcp-server-framework" }
session-manager = { path = "../session-manager" }
router-core = { path = "../router-core" }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["http", "text-tools"]
http = ["reqwest"]
text-tools = ["regex", "base64"]
llm = ["reqwest"]
